--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ ul {
   padding-right: 1px;
 }
 
-#tab-list > li {
+#tab-list li {
   display: flex;
   justify-content: space-between;
   gap: 1rem;
@@ -124,7 +124,7 @@ ul {
   color: var(--secondary-text-color);
 }
 
-#tab-list > li.active {
+#tab-list li.active {
   background-color: var(--primary-background-color);
   outline: none;
   border-left: 1px solid var(--border-color);
@@ -184,6 +184,11 @@ textarea {
   margin-top: 0;
 }
 
+#tab-settings.safe .controls,
+#tab-settings.safe details {
+  display: none;
+}
+
 article {
   padding: 1rem;
   border: 1px solid var(--border-color);
@@ -208,26 +213,27 @@ summary {
   display: flex;
   justify-content: space-between;
   gap: 1rem;
-  align-items: center;
+  align-items: stretch;
+}
+
+.controls-info > * {
+  width: 3.5rem;
+  height: 50%;
+  text-align: center;
+  border: 1px solid var(--border-color);
+  background-color: var(--secondary-background-color);
+  outline: 0;
+  font-size: 1rem;
 }
 
 .iterations {
-  width: 3.5rem;
-  font-size: 1rem;
-
   border-radius: var(--border-radius) var(--border-radius) 0 0;
-
-  margin-bottom: 1px;
+  border-bottom-width: 0.5px;
 }
 
 .progress {
-  width: 3.5rem;
-  text-align: center;
   border-radius: 0 0 var(--border-radius) var(--border-radius);
-
-  border: none;
-  outline: 1px solid var(--border-color);
-  background-color: var(--secondary-background-color);
+  border-top-width: 0.5px;
 }
 
 .controls button {
@@ -247,10 +253,6 @@ button.can-stop {
 
 #tab-list > li:only-child > div {
   display: none;
-}
-
-.running {
-  background-color: var(--accent);
 }
 
 #autocomplete {
@@ -302,13 +304,14 @@ button.can-stop {
   margin-left: -1rem;
   margin-right: -1rem;
   margin-bottom: -1rem;
+  border-radius: 0;
 }
 
 .log > li {
-  padding: 0.5rem;
+  padding: 0.3rem;
   border-top: 1px solid var(--border-color);
   border-radius: 0;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   background-color: var(--secondary-background-color);
 
   -webkit-touch-callout: text;
@@ -321,8 +324,8 @@ button.can-stop {
 
 .log > li.error {
   background-color: var(--error);
-  border-left: 0.5rem solid var(--border-color);
-  border-bottom: 0.5rem solid var(--border-color);
+  border-left: 0.3rem solid var(--border-color);
+  border-bottom: 0.3rem solid var(--border-color);
 }
 
 #premade-tags {
