--- a/style.css
+++ b/style.css
@@ -397,6 +397,14 @@ button.can-stop {
   border-radius: var(--border-radius);
   margin: 0;
 }
+#choose-domain > label {
+  -webkit-touch-callout: text; /* iOS Safari */
+  -webkit-user-select: text; /* Safari */
+  -khtml-user-select: text; /* Konqueror HTML */
+  -moz-user-select: text; /* Old versions of Firefox */
+  -ms-user-select: text; /* Internet Explorer/Edge */
+  user-select: text; /* Non-prefixed version, currently */
+}
 
 #prequeue-button {
   display: block;
